---
source: crates/assemble/src/ops/mod.rs
assertion_line: 188
expression: "&tables.schema_docs"
---
[
    SchemaDoc {
        schema: builtin://flow/ops-log-schema.json,
        dom: {"$schema":"https://json-schema.org/draft-07/schema","description":"Logs related to the processing of a Flow capture, derivation, or materialization","properties":{"fields":{"additionalProperties":true,"description":"Map of keys and values that are associated with this log entry.","type":"object"},"level":{"enum":["debug","info","warn","error"]},"message":{"type":"string"},"shard":{"$ref":"ops-shard-schema.json"},"ts":{"description":"Timestamp corresponding to the start of the transaction","format":"date-time","type":"string"}},"required":["shard","ts","level","message"],"title":"Flow task logs","type":"object"},
    },
    SchemaDoc {
        schema: builtin://flow/ops-shard-schema.json,
        dom: {"$schema":"https://json-schema.org/draft-07/schema","description":"Identifies a specific shard of a task, which may be the source of a log message or metrics","properties":{"keyBegin":{"description":"The inclusive beginning of the shard's assigned key range","pattern":"[0-9A-F]{8}","type":"string"},"kind":{"description":"The type of the catalog task","enum":["capture","derivation","materialization"]},"name":{"description":"The name of the catalog task (without the task type prefix)","type":"string"},"rClockBegin":{"description":"The inclusive beginning of the shard's assigned rClock range","pattern":"[0-9A-F]{8}","type":"string"}},"required":["kind","name","keyBegin","rClockBegin"],"title":"Flow shard id","type":"object"},
    },
    SchemaDoc {
        schema: builtin://flow/ops-stats-schema.json,
        dom: {"$defs":{"docsAndBytes":{"properties":{"bytesTotal":{"description":"Total number of bytes representing the JSON encoded documents","reduce":{"strategy":"sum"},"type":"integer"},"docsTotal":{"description":"Total number of documents","reduce":{"strategy":"sum"},"type":"integer"}},"reduce":{"strategy":"merge"},"required":["docsTotal","bytesTotal"],"type":"object"},"invokeStats":{"properties":{"out":{"$ref":"#/$defs/docsAndBytes"},"secondsTotal":{"type":"number"}},"reduce":{"strategy":"merge"},"required":["out","secondsTotal"],"type":"object"},"registerStats":{"properties":{"createdTotal":{"description":"The total number of new register keys that were created","reduce":{"strategy":"sum"},"type":"integer"}},"reduce":{"strategy":"merge"},"required":["createdTotal"],"type":"object"},"transformStats":{"anyOf":[{"required":["update"]},{"required":["publish"]}],"description":"Stats for a specific transform of a derivation, which will have an update, publish, or both.","properties":{"input":{"$ref":"#/$defs/docsAndBytes","description":"The input documents that were fed into this transform."},"publish":{"$ref":"#/$defs/invokeStats","description":"The outputs from publish lambda invocations."},"update":{"$ref":"#/$defs/invokeStats","description":"The outputs from update lambda invocations, which were combined into registers."}},"reduce":{"strategy":"merge"},"required":["input"],"type":"object"}},"$schema":"https://json-schema.org/draft-07/schema","description":"Statistics related to the processing of a Flow capture, derivation, or materialization","oneOf":[{"required":["capture"]},{"required":["derive"]},{"required":["materialize"]}],"properties":{"capture":{"additionalProperties":{"properties":{"out":{"$ref":"#/$defs/docsAndBytes"},"right":{"$ref":"#/$defs/docsAndBytes","description":"Documents fed into the combiner from the source"}},"reduce":{"strategy":"merge"},"type":"object"},"description":"Capture stats, organized by collection. The keys of this object are the collection names, and the values are the stats for that collection.","reduce":{"strategy":"merge"},"type":"object"},"derive":{"properties":{"out":{"$ref":"#/$defs/docsAndBytes"},"registers":{"$ref":"#/$defs/registerStats"},"transforms":{"additionalProperties":{"$ref":"#/$defs/transformStats"},"description":"A map of each transform (transform name, not collection name) to stats for that transform","reduce":{"strategy":"merge"},"type":"object"}},"reduce":{"strategy":"merge"},"required":["transforms","out"],"type":"object"},"materialize":{"additionalProperties":{"properties":{"left":{"$ref":"#/$defs/docsAndBytes"},"out":{"$ref":"#/$defs/docsAndBytes"},"right":{"$ref":"#/$defs/docsAndBytes"}},"reduce":{"strategy":"merge"},"type":"object"},"description":"A map of each binding source (collection name) to combiner stats for that binding","reduce":{"strategy":"merge"},"type":"object"},"openSecondsTotal":{"description":"Total time that the transaction was open before starting to commit","reduce":{"strategy":"sum"},"type":"number"},"shard":{"$ref":"ops-shard-schema.json"},"ts":{"description":"Timestamp corresponding to the start of the transaction","format":"date-time","type":"string"},"txnCount":{"description":"Total number of transactions represented by this stats document","reduce":{"strategy":"sum"},"type":"integer"}},"reduce":{"strategy":"merge"},"required":["shard","ts","txnCount","openSecondsTotal"],"title":"Flow task stats","type":"object"},
    },
]
